--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">CurrencyExchange</string>
     <string name="value_label">Value</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cancel">Cancel</string>
+    <string name="done_label">Done</string>
+    <string name="favorite_currencies_label">Select your favorite currencies</string>
 </resources>
