--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="cancel">Cancel</string>
     <string name="done_label">Done</string>
     <string name="favorite_currencies_label">Select your favorite currencies</string>
+    <string name="currency_settings_label">Currency Settings</string>
 </resources>
