--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CurrencyExchange</string>
+    <string name="app_name">Currency Exchange</string>
     <string name="value_label">Value</string>
 
     <!-- TODO: Remove or change this placeholder text -->
@@ -8,4 +8,5 @@
     <string name="done_label">Done</string>
     <string name="favorite_currencies_label">Select your favorite currencies</string>
     <string name="currency_settings_label">Currency Settings</string>
+    <string name="your_currency_quote_source_2018">Your currency quote source ©2018</string>
 </resources>
